--- a/css/index.css
+++ b/css/index.css
@@ -995,9 +995,9 @@ textarea{resize:none;}
     line-height: 54px;
 }
 .can1{
-    position: absolute;
-    bottom: 100px;
-    left: 150px;
+    /*position: absolute;*/
+    /*bottom: 100px;*/
+    /*left: 150px;*/
     /*margin-top: 50px;*/
     width: 1300px;
     height: 600px;
