--- a/css/index.css
+++ b/css/index.css
@@ -1004,5 +1004,5 @@ textarea{resize:none;}
     box-sizing: border-box;
     padding: 20px;
     background: rgba(0,0,0,0.6);
-    margin: 0 auto;
+    margin: 55px auto;
 }
